@@ -53,12 +53,12 @@ public class GuarantorTest {
     private LoanTransactionHelper loanTransactionHelper;
     private GuarantorHelper guarantorHelper;
     private SavingsAccountHelper savingsAccountHelper;
-    private final Float self1_balance = new Float(5000);
-    private final Float external1_balance = new Float(5000);
-    private final Float external2_balance = new Float(5000);
-    private final Float self1_guarantee = new Float(2000);
-    private final Float external1_guarantee = new Float(2000);
-    private final Float external2_guarantee = new Float(1000);
+    private final Float self1_balance = Float.valueOf((float)5000);
+    private final Float external1_balance = Float.valueOf((float)5000);
+    private final Float external2_balance = Float.valueOf((float)5000);
+    private final Float self1_guarantee = Float.valueOf((float)2000);
+    private final Float external1_guarantee = Float.valueOf((float)2000);
+    private final Float external2_guarantee = Float.valueOf((float)1000);
 
     @Before
     public void setUp() throws Exception {
@@ -75,9 +75,9 @@ public class GuarantorTest {
     @Test
     public void testGuarantor() {
 
-        Float self1_hold_funds = new Float(0);
-        Float external1_hold_funds = new Float(0);
-        Float external2_hold_funds = new Float(0);
+        Float self1_hold_funds = Float.valueOf((float)0);
+        Float external1_hold_funds = Float.valueOf((float)0);
+        Float external2_hold_funds = Float.valueOf((float)0);
         final Integer clientID = ClientHelper.createClient(this.requestSpec, this.responseSpec);
         ClientHelper.verifyClientCreatedOnServer(this.requestSpec, this.responseSpec, clientID);
         final Integer clientID_external = ClientHelper.createClient(this.requestSpec, this.responseSpec);
@@ -160,9 +160,9 @@ public class GuarantorTest {
         System.out.println("-----------------------------------UNDO APPROVE LOAN-----------------------------------------");
         loanStatusHashMap = this.loanTransactionHelper.undoApproval(loanID);
         LoanStatusChecker.verifyLoanIsPending(loanStatusHashMap);
-        verifySavingsOnHoldBalance(selfSavigsId, new Float(0));
-        verifySavingsOnHoldBalance(externalSavigsId_1, new Float(0));
-        verifySavingsOnHoldBalance(externalSavigsId_2, new Float(0));
+        verifySavingsOnHoldBalance(selfSavigsId, Float.valueOf((float)0));
+        verifySavingsOnHoldBalance(externalSavigsId_1, Float.valueOf((float)0));
+        verifySavingsOnHoldBalance(externalSavigsId_2, Float.valueOf((float)0));
 
         System.out.println("-----------------------------------APPROVE LOAN-----------------------------------------");
         loanStatusHashMap = this.loanTransactionHelper.approveLoan(LOAN_DISBURSEMENT_DATE, loanID);
@@ -182,8 +182,8 @@ public class GuarantorTest {
         todaysDate.add(Calendar.DAY_OF_MONTH, -7 * 3);
         String LOAN_REPAYMENT_DATE = dateFormat.format(todaysDate.getTime());
         Float totalDueForCurrentPeriod = (Float) loanSchedule.get(1).get("totalDueForPeriod");
-        external1_hold_funds -= new Float(827.5867);
-        external2_hold_funds -= new Float(413.7933);
+        external1_hold_funds -= Float.valueOf((float)827.5867);
+        external2_hold_funds -= Float.valueOf((float)413.7933);
         this.loanTransactionHelper.makeRepayment(LOAN_REPAYMENT_DATE, totalDueForCurrentPeriod, loanID);
         verifySavingsOnHoldBalance(selfSavigsId, self1_hold_funds);
         verifySavingsOnHoldBalance(externalSavigsId_1, external1_hold_funds);
@@ -194,8 +194,8 @@ public class GuarantorTest {
         todaysDate.add(Calendar.DAY_OF_MONTH, -7 * 2);
         LOAN_REPAYMENT_DATE = dateFormat.format(todaysDate.getTime());
         totalDueForCurrentPeriod = (Float) loanSchedule.get(2).get("totalDueForPeriod");
-        external1_hold_funds -= new Float(831.4067);
-        external2_hold_funds -= new Float(415.7033333);
+        external1_hold_funds -= Float.valueOf((float)831.4067);
+        external2_hold_funds -= Float.valueOf((float)415.7033333);
         this.loanTransactionHelper.makeRepayment(LOAN_REPAYMENT_DATE, totalDueForCurrentPeriod, loanID);
         verifySavingsOnHoldBalance(selfSavigsId, self1_hold_funds);
         verifySavingsOnHoldBalance(externalSavigsId_1, external1_hold_funds);
@@ -206,20 +206,20 @@ public class GuarantorTest {
         todaysDate.add(Calendar.DAY_OF_MONTH, -7);
         LOAN_REPAYMENT_DATE = dateFormat.format(todaysDate.getTime());
         totalDueForCurrentPeriod = (Float) loanSchedule.get(3).get("totalDueForPeriod");
-        self1_hold_funds -= new Float(741.355);
+        self1_hold_funds -= Float.valueOf((float)741.355);
         this.loanTransactionHelper.makeRepayment(LOAN_REPAYMENT_DATE, totalDueForCurrentPeriod, loanID);
         verifySavingsOnHoldBalance(selfSavigsId, self1_hold_funds);
-        verifySavingsOnHoldBalance(externalSavigsId_1, new Float(0));
-        verifySavingsOnHoldBalance(externalSavigsId_2, new Float(0));
+        verifySavingsOnHoldBalance(externalSavigsId_1, Float.valueOf((float)0));
+        verifySavingsOnHoldBalance(externalSavigsId_2, Float.valueOf((float)0));
 
         // forth repayment
         todaysDate = Calendar.getInstance();
         LOAN_REPAYMENT_DATE = dateFormat.format(todaysDate.getTime());
         totalDueForCurrentPeriod = (Float) loanSchedule.get(3).get("totalDueForPeriod");
         this.loanTransactionHelper.makeRepayment(LOAN_REPAYMENT_DATE, totalDueForCurrentPeriod, loanID);
-        verifySavingsOnHoldBalance(selfSavigsId, new Float(0));
-        verifySavingsOnHoldBalance(externalSavigsId_1, new Float(0));
-        verifySavingsOnHoldBalance(externalSavigsId_2, new Float(0));
+        verifySavingsOnHoldBalance(selfSavigsId, Float.valueOf((float)0));
+        verifySavingsOnHoldBalance(externalSavigsId_1, Float.valueOf((float)0));
+        verifySavingsOnHoldBalance(externalSavigsId_2, Float.valueOf((float)0));
 
         loanStatusHashMap = LoanStatusChecker.getStatusOfLoan(this.requestSpec, this.responseSpec, loanID);
         LoanStatusChecker.verifyLoanAccountIsClosed(loanStatusHashMap);
@@ -230,9 +230,9 @@ public class GuarantorTest {
     @Test
     public void testGuarantor_UNDO_DISBURSAL() {
 
-        Float self1_hold_funds = new Float(0);
-        Float external1_hold_funds = new Float(0);
-        Float external2_hold_funds = new Float(0);
+        Float self1_hold_funds = Float.valueOf((float)0);
+        Float external1_hold_funds = Float.valueOf((float)0);
+        Float external2_hold_funds = Float.valueOf((float)0);
         final Integer clientID = ClientHelper.createClient(this.requestSpec, this.responseSpec);
         ClientHelper.verifyClientCreatedOnServer(this.requestSpec, this.responseSpec, clientID);
         final Integer clientID_external = ClientHelper.createClient(this.requestSpec, this.responseSpec);
@@ -317,9 +317,9 @@ public class GuarantorTest {
         System.out.println("-----------------------------------UNDO APPROVE LOAN-----------------------------------------");
         loanStatusHashMap = this.loanTransactionHelper.undoApproval(loanID);
         LoanStatusChecker.verifyLoanIsPending(loanStatusHashMap);
-        verifySavingsOnHoldBalance(selfSavigsId, new Float(0));
-        verifySavingsOnHoldBalance(externalSavigsId_1, new Float(0));
-        verifySavingsOnHoldBalance(externalSavigsId_2, new Float(0));
+        verifySavingsOnHoldBalance(selfSavigsId, Float.valueOf((float)0));
+        verifySavingsOnHoldBalance(externalSavigsId_1, Float.valueOf((float)0));
+        verifySavingsOnHoldBalance(externalSavigsId_2, Float.valueOf((float)0));
 
         System.out.println("-----------------------------------APPROVE LOAN-----------------------------------------");
         loanStatusHashMap = this.loanTransactionHelper.approveLoan(LOAN_DISBURSEMENT_DATE, loanID);
@@ -373,8 +373,8 @@ public class GuarantorTest {
         todaysDate.add(Calendar.DAY_OF_MONTH, -7 * 3);
         String LOAN_REPAYMENT_DATE = dateFormat.format(todaysDate.getTime());
         Float totalDueForCurrentPeriod = (Float) loanSchedule.get(1).get("totalDueForPeriod");
-        external1_hold_funds -= new Float(827.5867);
-        external2_hold_funds -= new Float(413.7933);
+        external1_hold_funds -= Float.valueOf((float)827.5867);
+        external2_hold_funds -= Float.valueOf((float)413.7933);
         this.loanTransactionHelper.makeRepayment(LOAN_REPAYMENT_DATE, totalDueForCurrentPeriod, loanID);
         verifySavingsOnHoldBalance(selfSavigsId, self1_hold_funds);
         verifySavingsOnHoldBalance(externalSavigsId_3, external1_hold_funds);
@@ -385,8 +385,8 @@ public class GuarantorTest {
         todaysDate.add(Calendar.DAY_OF_MONTH, -7 * 2);
         LOAN_REPAYMENT_DATE = dateFormat.format(todaysDate.getTime());
         totalDueForCurrentPeriod = (Float) loanSchedule.get(2).get("totalDueForPeriod");
-        external1_hold_funds -= new Float(831.4067);
-        external2_hold_funds -= new Float(415.7033333);
+        external1_hold_funds -= Float.valueOf((float)831.4067);
+        external2_hold_funds -= Float.valueOf((float)415.7033333);
         this.loanTransactionHelper.makeRepayment(LOAN_REPAYMENT_DATE, totalDueForCurrentPeriod, loanID);
         verifySavingsOnHoldBalance(selfSavigsId, self1_hold_funds);
         verifySavingsOnHoldBalance(externalSavigsId_3, external1_hold_funds);
@@ -397,11 +397,11 @@ public class GuarantorTest {
         todaysDate.add(Calendar.DAY_OF_MONTH, -7);
         LOAN_REPAYMENT_DATE = dateFormat.format(todaysDate.getTime());
         totalDueForCurrentPeriod = (Float) loanSchedule.get(3).get("totalDueForPeriod");
-        Float self1_hold_funds_temp = self1_hold_funds - new Float(741.355);
+        Float self1_hold_funds_temp = self1_hold_funds - Float.valueOf((float)741.355);
         HashMap transactionDetail = this.loanTransactionHelper.makeRepayment(LOAN_REPAYMENT_DATE, totalDueForCurrentPeriod, loanID);
         verifySavingsOnHoldBalance(selfSavigsId, self1_hold_funds_temp);
-        verifySavingsOnHoldBalance(externalSavigsId_3, new Float(0));
-        verifySavingsOnHoldBalance(externalSavigsId_2, new Float(0));
+        verifySavingsOnHoldBalance(externalSavigsId_3, Float.valueOf((float)0));
+        verifySavingsOnHoldBalance(externalSavigsId_2, Float.valueOf((float)0));
 
         // undo repayment
         this.loanTransactionHelper.adjustLoanTransaction(loanID, (Integer) transactionDetail.get(CommonConstants.RESPONSE_RESOURCE_ID),
@@ -414,17 +414,17 @@ public class GuarantorTest {
         loanStatusHashMap = this.loanTransactionHelper.undoDisbursal(loanID);
         LoanStatusChecker.verifyLoanIsApproved(loanStatusHashMap);
         LoanStatusChecker.verifyLoanIsWaitingForDisbursal(loanStatusHashMap);
-        verifySavingsOnHoldBalance(selfSavigsId, new Float(self1_guarantee));
-        verifySavingsOnHoldBalance(externalSavigsId_3, new Float(external1_guarantee));
-        verifySavingsOnHoldBalance(externalSavigsId_2, new Float(external2_guarantee));
+        verifySavingsOnHoldBalance(selfSavigsId, Float.valueOf((float)self1_guarantee));
+        verifySavingsOnHoldBalance(externalSavigsId_3, Float.valueOf((float)external1_guarantee));
+        verifySavingsOnHoldBalance(externalSavigsId_2, Float.valueOf((float)external2_guarantee));
     }
 
     @SuppressWarnings({ "rawtypes", "unchecked" })
     @Test
     public void testGuarantor_RECOVER_GUARANTEES() {
 
-        Float self1_hold_funds = new Float(0);
-        Float external1_hold_funds = new Float(0);
+        Float self1_hold_funds = Float.valueOf((float)0);
+        Float external1_hold_funds = Float.valueOf((float)0);
         final Integer clientID = ClientHelper.createClient(this.requestSpec, this.responseSpec);
         ClientHelper.verifyClientCreatedOnServer(this.requestSpec, this.responseSpec, clientID);
         final Integer clientID_external = ClientHelper.createClient(this.requestSpec, this.responseSpec);
@@ -476,14 +476,14 @@ public class GuarantorTest {
         todaysDate.add(Calendar.DAY_OF_MONTH, -14);
         String LOAN_REPAYMENT_DATE = dateFormat.format(todaysDate.getTime());
         Float totalDueForCurrentPeriod = (Float) loanSchedule.get(1).get("totalDueForPeriod");
-        external1_hold_funds -= new Float(993.104);
+        external1_hold_funds -= Float.valueOf((float)993.104);
         this.loanTransactionHelper.makeRepayment(LOAN_REPAYMENT_DATE, totalDueForCurrentPeriod, loanID);
         verifySavingsOnHoldBalance(selfSavigsId, self1_hold_funds);
         verifySavingsOnHoldBalance(externalSavigsId_1, external1_hold_funds);
 
         this.loanTransactionHelper.recoverFromGuarantor(loanID);
-        verifySavingsBalanceAndOnHoldBalance(selfSavigsId, new Float(0), self1_balance - self1_hold_funds);
-        verifySavingsBalanceAndOnHoldBalance(externalSavigsId_1, new Float(0), external1_balance - external1_hold_funds);
+        verifySavingsBalanceAndOnHoldBalance(selfSavigsId, Float.valueOf((float)0), self1_balance - self1_hold_funds);
+        verifySavingsBalanceAndOnHoldBalance(externalSavigsId_1, Float.valueOf((float)0), external1_balance - external1_hold_funds);
 
     }
 
@@ -491,17 +491,17 @@ public class GuarantorTest {
     @Test
     public void testGuarantor_RECOVER_GUARANTEES_WITH_MORE_GUARANTEE() {
 
-        Float self1_hold_funds = new Float(0);
-        Float external1_hold_funds = new Float(0);
+        Float self1_hold_funds = Float.valueOf((float)0);
+        Float external1_hold_funds = Float.valueOf((float)0);
         final Integer clientID = ClientHelper.createClient(this.requestSpec, this.responseSpec);
         ClientHelper.verifyClientCreatedOnServer(this.requestSpec, this.responseSpec, clientID);
         final Integer clientID_external = ClientHelper.createClient(this.requestSpec, this.responseSpec);
         ClientHelper.verifyClientCreatedOnServer(this.requestSpec, this.responseSpec, clientID_external);
 
-        Float selfBalance = new Float(10000);
-        Float externalBalance = new Float(10000);
-        Float selfguarantee = new Float(6000);
-        Float externalguarantee = new Float(7000);
+        Float selfBalance = Float.valueOf((float)10000);
+        Float externalBalance = Float.valueOf((float)10000);
+        Float selfguarantee = Float.valueOf((float)6000);
+        Float externalguarantee = Float.valueOf((float)7000);
 
         final Integer selfSavigsId = SavingsAccountHelper.openSavingsAccount(this.requestSpec, this.responseSpec, clientID,
                 String.valueOf(selfBalance));
@@ -549,14 +549,14 @@ public class GuarantorTest {
         todaysDate.add(Calendar.DAY_OF_MONTH, -14);
         String LOAN_REPAYMENT_DATE = dateFormat.format(todaysDate.getTime());
         Float totalDueForCurrentPeriod = (Float) loanSchedule.get(1).get("totalDueForPeriod");
-        external1_hold_funds -= new Float(3227.588);
+        external1_hold_funds -= Float.valueOf((float)3227.588);
         this.loanTransactionHelper.makeRepayment(LOAN_REPAYMENT_DATE, totalDueForCurrentPeriod, loanID);
         verifySavingsOnHoldBalance(selfSavigsId, self1_hold_funds);
         verifySavingsOnHoldBalance(externalSavigsId_1, external1_hold_funds);
 
         this.loanTransactionHelper.recoverFromGuarantor(loanID);
-        verifySavingsBalanceAndOnHoldBalance(selfSavigsId, new Float(0), selfBalance - new Float(4615.385));
-        verifySavingsBalanceAndOnHoldBalance(externalSavigsId_1, new Float(0), externalBalance - new Float(2901.8553));
+        verifySavingsBalanceAndOnHoldBalance(selfSavigsId, Float.valueOf((float)0), selfBalance - Float.valueOf((float)4615.385));
+        verifySavingsBalanceAndOnHoldBalance(externalSavigsId_1, Float.valueOf((float)0), externalBalance - Float.valueOf((float)2901.8553));
 
     }
 
@@ -565,8 +565,8 @@ public class GuarantorTest {
     @Test
     public void testGuarantor_WRITE_OFF_LOAN() {
 
-        Float self1_hold_funds = new Float(0);
-        Float external1_hold_funds = new Float(0);
+        Float self1_hold_funds = Float.valueOf((float)0);
+        Float external1_hold_funds = Float.valueOf((float)0);
         final Integer clientID = ClientHelper.createClient(this.requestSpec, this.responseSpec);
         ClientHelper.verifyClientCreatedOnServer(this.requestSpec, this.responseSpec, clientID);
         final Integer clientID_external = ClientHelper.createClient(this.requestSpec, this.responseSpec);
@@ -618,7 +618,7 @@ public class GuarantorTest {
         todaysDate.add(Calendar.DAY_OF_MONTH, -14);
         String LOAN_REPAYMENT_DATE = dateFormat.format(todaysDate.getTime());
         Float totalDueForCurrentPeriod = (Float) loanSchedule.get(1).get("totalDueForPeriod");
-        external1_hold_funds -= new Float(993.104);
+        external1_hold_funds -= Float.valueOf((float)993.104);
         this.loanTransactionHelper.makeRepayment(LOAN_REPAYMENT_DATE, totalDueForCurrentPeriod, loanID);
         verifySavingsOnHoldBalance(selfSavigsId, self1_hold_funds);
         verifySavingsOnHoldBalance(externalSavigsId_1, external1_hold_funds);
@@ -626,8 +626,8 @@ public class GuarantorTest {
         todaysDate = Calendar.getInstance();
         String LOAN_WRITEOFF_DATE = dateFormat.format(todaysDate.getTime());
         this.loanTransactionHelper.writeOffLoan(LOAN_WRITEOFF_DATE, loanID);
-        verifySavingsBalanceAndOnHoldBalance(selfSavigsId, new Float(0), self1_balance);
-        verifySavingsBalanceAndOnHoldBalance(externalSavigsId_1, new Float(0), external1_balance);
+        verifySavingsBalanceAndOnHoldBalance(selfSavigsId, Float.valueOf((float)0), self1_balance);
+        verifySavingsBalanceAndOnHoldBalance(externalSavigsId_1, Float.valueOf((float)0), external1_balance);
 
     }
 
